2005-11-09  Peter Dennis Bartok <pbartok@novell.com>

	* RichTextBoxTest.cs: Added Find() tests

2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* LabelPropertyTest.cs: Updated product version to 1.1.4322.2032 (1.1 SP1).

2005-10-18  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListViewCollectionsTest.cs: Add tests for the ListView Collections

2005-10-17  Ritvik Mayank  <mritvik@novell.com>

	* TabControlTest.cs : Added test case for TabControl

2005-10-16  Ritvik Mayank  <mritvik@novell.com>

	* TrackBarTest.cs : Added test case for TrackBar

2005-10-16  Jordi Mas i Hernandez <jordi@ximian.com>
	 
	* DataGridBoolColumn.cs: fixes warning

2005-10-10  Peter Dennis Bartok <pbartok@novell.com>

	* GenerateControlStyleTest.cs, ControlStyleTest.cs: Flipped
	  order for want and actual to avoid misleading errors

2005-10-07  Peter Dennis Bartok <pbartok@novell.com>

	* GenerateControlStyleTest.cs: Code to auto-generate the
	  source file ControlStyleTest.cs
	* ControlStyleTest.cs: Tests for testing ControlStyles

2005-09-28 Hisham Mardam Bey <hisham.mardambey@gmail.com>

        * Common.cs : Add common things here.
	* LabelTest.cs : Remove common declarations to Common.cs
	* ScrollBarTest.cs : Remove common declarations to Common.cs
	                     Add more propery range / exception tests
			     Add more event order tests
			     Fix Mouse tests.
			     Add event arg tests.

2005-09-27 Hisham Mardam Bey <hisham.mardambey@gmail.com>

	* LabelTest.cs : Added more event tests (external handlers)
	                  Added event arg checks
			  Fixed OnPaint tests.
			  Seperated invalidation tests.

2005-09-26 Hisham Mardam Bey <hisham.mardambey@gmail.com>

	* ScrollBarTest.cs : Add more tests for event firing order
	                     Messages to simulate mouse events

2005-09-23  Ritvik Mayank  <mritvik@novell.com>

	* ErrorProviderTest.cs : Added test case for ErrorProvider

2005-09-23 Hisham Mardam Bey <hisham.mardambey@gmail.com>
